2010-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Allow setting the External Console flag
	  in the options.

	* templates/ConsoleCProject.xpt.xml:
	* templates/ConsoleCppProject.xpt.xml: Set the external
	  console flag for console projects.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* Project/CProjectBinding.cs: Only create single file projects
	  for C/C++ files.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Compiler/GNUCompiler.cs: Don't include the generic () errors
	  in the errors list. Don't reverse order of errors from
	  compiler.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* CBinding.csproj:
	* gtk-gui/gui.stetic:
	* Gui/AddPathDialog.cs:
	* Gui/AddLibraryDialog.cs:
	* Gui/OutputOptionsPanel.cs:
	* Gui/CodeGenerationPanel.cs:
	* gtk-gui/CBinding.AddPathDialog.cs:
	* gtk-gui/CBinding.AddLibraryDialog.cs:
	* gtk-gui/CBinding.OutputOptionsPanel.cs:
	* gtk-gui/CBinding.CodeGenerationPanel.cs:
	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Clean up
	  dialog placement.

2010-05-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* CBinding.csproj:
	* CBinding.addin.xml:
	* Project/CProject.cs:
	* Gui/CTextEditorExtension.cs:
	* Gui/SwapSourceHeaderCommand.cs: Replaced the 'Swap
	  Source/Header' command by a handler for the 'Switch between
	  related files' command.

2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: Track API changes.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: Track API changes.

2010-03-26  Levi Bard  <levi@unity3d.com>

	* Project/CProject.cs: Fix linking for library projects whose
	  names are prefixed with lib. Fixes #587298.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bumped MD version.

2010-03-18  Levi Bard  <levi@unity3d.com>

	* Gui/DataProvider.cs: 
	* Gui/CTextEditorExtension.cs: Track API changes.
